# gout-rs

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  compose.yaml
.github/workflows/: release.yaml
infra/postgres/: 01-init.sql  02-init.sh
infra/traefik/: dynamic.yaml  traefik.yaml
services/gateway/: Cargo.toml
services/user/: Cargo.toml
services/user/src/domain/: aggregate.rs  event.rs  mod.rs  port.rs
services/user/src/infrastructure/persistence/: entity.rs  repository.rs
