[workspace]
resolver = "2"
members = [
  "services/gateway",
  "services/order",
  "services/product",
  "services/user",
]
default-members = ["services/gateway"]

[workspace.dependencies]
axum = { version = "0.8.9" }
chrono = { version = "0.4.45", features = ["now"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["postgres"] }
tokio = "1.52.3"
